# soil-rs-correlation-screening

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml
ML/: cv_scheme_comparison.py  farm_lofo_feature_importance.py  farm_lofo_honest_audit.py  farm_lofo_metrics.py  feature_leakage_taxonomy.py  feature_quality_cv.py  key_table.py  ml_feature_recommendations.py
ML/results/: .category_digest.md  _discussion_draft.md  ablation_summary_8x8.csv  ablation_summary_all_targets.csv  ablation_summary_hu.csv  ablation_summary_k.csv  ablation_summary_no3.csv  ablation_summary_p.csv  ablation_summary_ph.csv  ablation_summary_s.csv  all_models_comparison.csv  cascaded_cnn_results.csv  cascaded_cnn_v2_results.csv  category_hypotheses.md  central_results_section.md  classic_ml_ablation_split.csv  convnext_ablation_hu.csv  convnext_ablation_k.csv  convnext_ablation_no3.csv  convnext_ablation_p.csv  convnext_ablation_ph.csv  convnext_ablation_s.csv  convnext_ablation_summary_all.csv  cv_scheme_comparison.csv  discussion_section.md  farm_lofo_all_models.csv  farm_lofo_all_targets.csv  (+26 more)
article/: manuscript_edited.docx
data/: soil_analysis.xlsx
math_statistics/: __init__.py  adversarial_s.py  composite_features.py  composite_vs_single.py  config.py  confounding_analysis.py  corrected_tables.py  correlation_analysis.py  derived_soil.py  descriptive_stats.py  intercorrelation.py  key_figure.py  nested_variance.py  permutation_bootstrap.py  plots.py  run_all.py  seasonal_analysis.py  semivariogram.py  spatial_analysis.py  variance_decomposition.py
(+15 files in other folders)
